fix(style): change column gap of `.distro` to 1rem

--- a/src/optionsPage/components/Header/index.module.scss
+++ b/src/optionsPage/components/Header/index.module.scss
@@ -19,7 +19,7 @@
 
 .distro {
   display: flex;
-  column-gap: 2em;
+  column-gap: 1rem;
 }
 
 .logoImage {
